tests/rosetta/transpiler/Clojure/24-game-solve.error
run error: exit status 1
WARNING: rest already refers to: #'clojure.core/rest in namespace: main, being replaced by: #'main/rest
 5
 8
 6
 1
:  
Execution error (NullPointerException) at main/solve (24-game-solve.clj:39).
Cannot invoke "Object.getClass()" because "x" is null

Full report at:
/tmp/clojure-10268636758288582218.edn
